--- a/views/grids_css.html
+++ b/views/grids_css.html
@@ -27,14 +27,11 @@
 
 <!-- Wrap all page content here -->
 <div id="wrap">
-
-
-
     <!-- Begin page content -->
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <h1><a href="http://elcomite.org"><img src="../images/elComite.png"/></a>   {el comité}</h1>
+                <h1><a href="http://elcomite.org"><img src="../images/elComite.png"/></a>   {elComité}</h1>
                 <p class="lead">Comunidad profesional e independiente de Bilbao en torno al desarrollo de proyectos para Internet.</p>
             </div>
         </div>
@@ -42,49 +39,41 @@
     <div id="fondo_post">
         <div class="container">
             <div class="row">
-                <div class="col-md-8">
-                    <h4>Comité Noviembre - Grids CSS by Ion López</h4>
-                    <article class="event panel">
-                        <div class="row">
-                            <div class="col-md-12">
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                                proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                            </div>            
-                        </div>
-                    </article>
+                <div id="left_block" class="col-md-8">
+                    <div id="desc" class="col-md-12">
+                        <h4>Comité Noviembre - Cuadrículas (Grids) CSS by Ion López</h4>
+                        <article class="event panel">
+                            <div class="row iniciativa">
+                                <div class="col-md-12">
+                                    <p>Qué son, cuáles son las más usadas, cuándo y cómo utilizarlas y cómo hacer nuestra propia cuadrícula en CSS.</p>
+                                </div>            
+                            </div>
+                        </article>
+                    </div>
+                    <div id="speaker" class="col-md-12">
+                        <h4>Sobre Ion López</h4>
+                        <article class="event panel">
+                            <div class="row">
+                                <div  class="col-md-2">
+                                    <img src="../images/speakers/ion-lopez.jpg" />
+                                </div>  
+                                <div class="col-md-8">
+                                    <br>
+                                    <p>Software Development Engineer en Plain Concepts</p>
+                                    <a href="http://es.linkedin.com/in/ionlopez"><img src="http://s.c.lnkd.licdn.com/scds/common/u/img/webpromo/btn_myprofile_160x33_es_ES.png?locale=" border="0" alt="Ver el perfil de Ion López en LinkedIn"></a>
+                                </div>          
+                            </div>
+                        </article>
+                    </div>
                 </div>
-                <div class="col-md-4">
+                <div id="gLoc" class="col-md-4">
                     <h4>Localización</h4>
                     <article class="event panel">
                         <div class="row">
                             <div class="col-md-11 col-sm-11 col-xs-11 col-md-offset-1 col-xs-offset-1">
                                 <h3>28 de Noviembre, 19:00h</h3>
                                 <p><strong>Universidad de Deusto - Aula 202b</strong></p>
-                                <iframe width="300" height="300" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.es/maps?f=q&amp;source=s_q&amp;hl=es&amp;geocode=&amp;q=Universidad+de+Deusto,+Bilbao&amp;aq=0&amp;oq=universidad+de+de&amp;sll=43.272041,-2.939049&amp;sspn=0.005484,0.009645&amp;ie=UTF8&amp;hq=Universidad&amp;hnear=Deusto,+Bilbao,+Vizcaya,+Pa%C3%ADs+Vasco&amp;ll=43.273436,-2.949386&amp;spn=0.006295,0.021649&amp;t=m&amp;iwloc=top1sla1&amp;output=embed"></iframe><br /><small><a href="https://maps.google.es/maps?f=q&amp;source=embed&amp;hl=es&amp;geocode=&amp;q=Universidad+de+Deusto,+Bilbao&amp;aq=0&amp;oq=universidad+de+de&amp;sll=43.272041,-2.939049&amp;sspn=0.005484,0.009645&amp;ie=UTF8&amp;hq=Universidad&amp;hnear=Deusto,+Bilbao,+Vizcaya,+Pa%C3%ADs+Vasco&amp;ll=43.273436,-2.949386&amp;spn=0.006295,0.021649&amp;t=m&amp;iwloc=top1sla1" style="color:#0000FF;text-align:left">Ver mapa más grande</a></small>
-                            </div>            
-                        </div>
-                    </article>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-12">
-                    <h4>Sobre Ion López</h4>
-                    <article class="event panel">
-                        <div class="row">
-                            <div id="speaker" class="col-md-2">
-                                <img src="../images/speakers/ion-lopez.jpg"/>
-                            </div> 
-                            <div class="col-md-10">
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                                proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                                <iframe width="300" height="300" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.es/maps?f=q&amp;source=s_q&amp;hl=es&amp;geocode=&amp;q=Avenida%2Bde%2Blas%2BUniversidades,%2B24,%2BBilbao,%2Bespa%C3%B1a&amp;aq=&amp;sll=42.854037,-2.677158&amp;sspn=0.077771,0.181789&amp;ie=UTF8&amp;hq=&amp;hnear=Av+de+las+Universidades,+24,+48007+Bilbao,+Vizcaya&amp;ll=43.270293,-2.93716&amp;spn=0.009656,0.022724&amp;t=h&amp;z=14&amp;output=embed"></iframe><br /><small><a href="https://maps.google.es/maps?f=q&amp;source=embed&amp;hl=es&amp;geocode=&amp;q=Avenida%2Bde%2Blas%2BUniversidades,%2B24,%2BBilbao,%2Bespa%C3%B1a&amp;aq=&amp;sll=42.854037,-2.677158&amp;sspn=0.077771,0.181789&amp;ie=UTF8&amp;hq=&amp;hnear=Av+de+las+Universidades,+24,+48007+Bilbao,+Vizcaya&amp;ll=43.270293,-2.93716&amp;spn=0.009656,0.022724&amp;t=h&amp;z=14" style="color:#0000FF;text-align:left">Ver mapa más grande</a></small>
                             </div>            
                         </div>
                     </article>
